fixed spacing

--- a/style.css
+++ b/style.css
@@ -49,7 +49,10 @@ header h1 {
     display: grid;
     grid-template-rows: repeat(6, 1fr);
     gap: 5px;
+    max-width: 350px;
+    margin: 0 auto;
     margin-bottom: 20px;
+
 }
 
 .row {
